make css file loading Asynchronously

--- a/ui/html/blog-single.html
+++ b/ui/html/blog-single.html
@@ -9,27 +9,100 @@
     />
 
     <link
+      rel="preload"
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
-      rel="stylesheet"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
+    /></noscript>
 
     <link
-      rel="stylesheet"
+      rel="preload"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    /></noscript>
 
-    <link rel="stylesheet" href="../css/animate.css" />
+    <link
+      rel="preload"
+      href="../css/animate.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript><link rel="stylesheet" href="../css/animate.css" /></noscript>
 
-    <link rel="stylesheet" href="../css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="../css/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="../css/magnific-popup.css" />
+    <link
+      rel="preload"
+      href="../css/owl.carousel.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/owl.carousel.min.css"
+    /></noscript>
 
-    <link rel="stylesheet" href="../css/bootstrap-datepicker.css" />
-    <link rel="stylesheet" href="../css/jquery.timepicker.css" />
+    <link
+      rel="preload"
+      href="../css/owl.theme.default.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/owl.theme.default.min.css"
+    /></noscript>
+    <link
+      rel="preload"
+      href="../css/magnific-popup.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/magnific-popup.css"
+    /></noscript>
 
-    <link rel="preload" href="../css/flaticon.css" as="style"/>
+    <link
+      rel="preload"
+      href="../css/bootstrap-datepicker.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/bootstrap-datepicker.css"
+    /></noscript>
 
-    <link rel="stylesheet" href="../css/style.css" />
+    <link
+      rel="preload"
+      href="../css/jquery.timepicker.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/jquery.timepicker.css"
+    /></noscript>
+
+    <link
+      rel="preload"
+      href="../css/flaticon.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript><link rel="stylesheet" href="../css/flaticon.css" /></noscript>
+    <link
+      rel="preload"
+      href="../css/style.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript><link rel="stylesheet" href="../css/style.css" /></noscript>
   </head>
   <body>
     <div class="wrap">
@@ -564,104 +637,116 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-        <div class="col-md-12">
-          <div class="bg-secondary w-100 rounded p-4">
-          <div class="row">
-            <div class="col-md-7 d-flex align-items-center">
-            <h2
-              class="mb-3 mb-sm-0"
-              style="color:black; font-size: 18px;"
-            >
-              Subcribe for our weekly tips
-            </h2>
-            </div>
-            <div class="col-md-5 d-flex align-items-center">
-            <form action="#" class="subscribe-form" method="POST" data-netlify="true">
-              <div class="form-group d-flex">
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Enter email address"
-              />
-              <input
-                type="submit"
-                value="Subscribe"
-                class="submit px-3"
-              />
+          <div class="col-md-12">
+            <div class="bg-secondary w-100 rounded p-4">
+              <div class="row">
+                <div class="col-md-7 d-flex align-items-center">
+                  <h2
+                    class="mb-3 mb-sm-0"
+                    style="color: black; font-size: 18px;"
+                  >
+                    Subcribe for our weekly tips
+                  </h2>
+                </div>
+                <div class="col-md-5 d-flex align-items-center">
+                  <form
+                    action="#"
+                    class="subscribe-form"
+                    method="POST"
+                    data-netlify="true"
+                  >
+                    <div class="form-group d-flex">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Enter email address"
+                      />
+                      <input
+                        type="submit"
+                        value="Subscribe"
+                        class="submit px-3"
+                      />
+                    </div>
+                  </form>
+                </div>
               </div>
-            </form>
             </div>
           </div>
-          </div>
-        </div>
         </div>
         <div class="row">
-        <div class="col-md-4 col-lg-5">
-          <div class="row">
-          <div class="col-md-12 col-lg-8 mb-md-0 mb-4">
-            <h2 class="footer-heading">
-            <a href="../index.html" class="logo">W L<span>H M</span></a>
-            </h2>
-            <p>Love yourself and change your body shape into body shape your want</p>
-            <a href="#"
-            >read more <span class="ion-ios-arrow-round-forward"></span
-            ></a>
+          <div class="col-md-4 col-lg-5">
+            <div class="row">
+              <div class="col-md-12 col-lg-8 mb-md-0 mb-4">
+                <h2 class="footer-heading">
+                  <a href="../index.html" class="logo">W L<span>H M</span></a>
+                </h2>
+                <p>
+                  Love yourself and change your body shape into body shape your
+                  want
+                </p>
+                <a href="#"
+                  >read more <span class="ion-ios-arrow-round-forward"></span
+                ></a>
+              </div>
+            </div>
           </div>
+          <div class="col-md-8 col-lg-7">
+            <div class="row">
+              <div class="col-md-3 mb-md-0 mb-4 border-left">
+                <h2 class="footer-heading">Services</h2>
+                <ul class="list-unstyled">
+                  <li><a href="#" class="py-1 d-block">Meal Plan</a></li>
+                  <li>
+                    <a href="#" class="py-1 d-block">Workout Strategy</a>
+                  </li>
+                  <li><a href="#" class="py-1 d-block">inspirations</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3 mb-md-0 mb-4 border-left">
+                <h2 class="footer-heading">About</h2>
+                <ul class="list-unstyled">
+                  <li><a href="#" class="py-1 d-block">Blog</a></li>
+                  <li><a href="#" class="py-1 d-block">Contact</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3 mb-md-0 mb-4 border-left">
+                <h2 class="footer-heading">Social</h2>
+                <ul class="list-unstyled">
+                  <li><a href="#" class="py-1 d-block">Facebook</a></li>
+                  <li><a href="#" class="py-1 d-block">Twitter</a></li>
+                  <li><a href="#" class="py-1 d-block">Instagram</a></li>
+                </ul>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="col-md-8 col-lg-7">
-          <div class="row">
-          <div class="col-md-3 mb-md-0 mb-4 border-left">
-            <h2 class="footer-heading">Services</h2>
-            <ul class="list-unstyled">
-            <li><a href="#" class="py-1 d-block">Meal Plan</a></li>
-            <li>
-              <a href="#" class="py-1 d-block">Workout Strategy</a>
-            </li>
-            <li><a href="#" class="py-1 d-block">inspirations</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3 mb-md-0 mb-4 border-left">
-            <h2 class="footer-heading">About</h2>
-            <ul class="list-unstyled">
-            <li><a href="#" class="py-1 d-block">Blog</a></li>
-            <li><a href="#" class="py-1 d-block">Contact</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3 mb-md-0 mb-4 border-left">
-            <h2 class="footer-heading">Social</h2>
-            <ul class="list-unstyled">
-            <li><a href="#" class="py-1 d-block">Facebook</a></li>
-            <li><a href="#" class="py-1 d-block">Twitter</a></li>
-            <li><a href="#" class="py-1 d-block">Instagram</a></li>
-            </ul>
-          </div>
-          </div>
-        </div>
         </div>
         <div class="row mt-5">
-        <div class="col-md-6 col-lg-8">
-          <p class="copyright">
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;
-          <script>
-            document.write(new Date().getFullYear());
-          </script>
-          All rights reserved | This template is made with
-          <i class="fa fa-heart" aria-hidden="true"></i> by
-          <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          </p>
-        </div>
-        <div class="col-md-6 col-lg-4 text-md-right">
-          <p class="mb-0 list-unstyled privacy">
-          <a class="mr-md-3" href="#" title="Terms and Condititon">Terms and Conditions</a>
-          <a class="mr-md-3" href="#" title="Privacy Policy">Privacy Policy</a>
-          </p>
-        </div>
+          <div class="col-md-6 col-lg-8">
+            <p class="copyright">
+              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              Copyright &copy;
+              <script>
+                document.write(new Date().getFullYear());
+              </script>
+              All rights reserved | This template is made with
+              <i class="fa fa-heart" aria-hidden="true"></i> by
+              <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
+              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4 text-md-right">
+            <p class="mb-0 list-unstyled privacy">
+              <a class="mr-md-3" href="#" title="Terms and Condititon"
+                >Terms and Conditions</a
+              >
+              <a class="mr-md-3" href="#" title="Privacy Policy"
+                >Privacy Policy</a
+              >
+            </p>
+          </div>
         </div>
       </div>
-      </footer>
+    </footer>
 
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen">
