--- a/ui/html/privacy-policy.html
+++ b/ui/html/privacy-policy.html
@@ -4,22 +4,100 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="preload"
+      href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
+    /></noscript>
 
-    <link rel="preload" href="../css/animate.css" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
-    <noscript><link rel="stylesheet" href="../css/animate.css"></noscript>
+    <link
+      rel="preload"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    /></noscript>
 
-    <link rel="stylesheet" href="../css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="../css/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="../css/magnific-popup.css" />
+    <link
+      rel="preload"
+      href="../css/animate.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript><link rel="stylesheet" href="../css/animate.css" /></noscript>
 
-    <link rel="stylesheet" href="../css/bootstrap-datepicker.css" />
-    <link rel="stylesheet" href="../css/jquery.timepicker.css" />
+    <link
+      rel="preload"
+      href="../css/owl.carousel.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/owl.carousel.min.css"
+    /></noscript>
 
-    <link rel="preload" href="../css/flaticon.css" as="style"/>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link
+      rel="preload"
+      href="../css/owl.theme.default.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/owl.theme.default.min.css"
+    /></noscript>
+    <link
+      rel="preload"
+      href="../css/magnific-popup.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/magnific-popup.css"
+    /></noscript>
+
+    <link
+      rel="preload"
+      href="../css/bootstrap-datepicker.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/bootstrap-datepicker.css"
+    /></noscript>
+
+    <link
+      rel="preload"
+      href="../css/jquery.timepicker.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/jquery.timepicker.css"
+    /></noscript>
+
+    <link
+      rel="preload"
+      href="../css/flaticon.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript><link rel="stylesheet" href="../css/flaticon.css" /></noscript>
+    <link
+      rel="preload"
+      href="../css/style.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript><link rel="stylesheet" href="../css/style.css" /></noscript>
     <title>Privacy Policy | weight loss and health motivation</title>
   </head>
   <body>
@@ -120,14 +198,21 @@
       <p>Welcome to <b> weight loss and health motivation</b>.</p>
       <p>
         <b>weight loss and health motivation</b> (“us”, “we”, or “our”) operates
-        <b><a href="https://www.weightlossandhealthmotivation.com/">https://www.weightlossandhealthmotivation.com/</a></b> (hereinafter
-        referred to as <b>“Service”</b>).
+        <b
+          ><a href="https://www.weightlossandhealthmotivation.com/"
+            >https://www.weightlossandhealthmotivation.com/</a
+          ></b
+        >
+        (hereinafter referred to as <b>“Service”</b>).
       </p>
       <p>
         Our Privacy Policy governs your visit to
-        <b><a href="https://www.weightlossandhealthmotivation.com/">https://www.weightlossandhealthmotivation.com/</a></b>, and explains how
-        we collect, safeguard and disclose information that results from your
-        use of our Service.
+        <b
+          ><a href="https://www.weightlossandhealthmotivation.com/"
+            >https://www.weightlossandhealthmotivation.com/</a
+          ></b
+        >, and explains how we collect, safeguard and disclose information that
+        results from your use of our Service.
       </p>
       <p>
         We use your data to provide and improve Service. By using Service, you
@@ -143,7 +228,10 @@
       </p>
       <p>2. <b>Definitions</b></p>
       <p>
-        <b>SERVICE</b> means the <a href="https://www.weightlossandhealthmotivation.com/">https://www.weightlossandhealthmotivation.com/</a>
+        <b>SERVICE</b> means the
+        <a href="https://www.weightlossandhealthmotivation.com/"
+          >https://www.weightlossandhealthmotivation.com/</a
+        >
         website operated by weight loss and health motivation.
       </p>
       <p>
@@ -273,8 +361,8 @@
       </p>
       <p>5. <b>Use of Data</b></p>
       <p>
-        <b>weight loss and health motivation</b> uses the collected data for various
-        purposes:
+        <b>weight loss and health motivation</b> uses the collected data for
+        various purposes:
       </p>
       <p>0.1. to provide and maintain our Service;</p>
       <p>0.2. to notify you about changes to our Service;</p>
@@ -474,7 +562,12 @@
       <p>17. <b>Contact Us</b></p>
       <p>
         If you have any questions about this Privacy Policy, please contact us
-        by email: <b><a href="mailto:support@weightlossandhealthmotivation.com">support@weightlossandhealthmotivation.com</a></b>.
+        by email:
+        <b
+          ><a href="mailto:support@weightlossandhealthmotivation.com"
+            >support@weightlossandhealthmotivation.com</a
+          ></b
+        >.
       </p>
     </div>
     <footer class="footer">
@@ -605,10 +698,7 @@
                 title="Privacy Policy"
                 >Privacy</a
               >
-              <a
-                class="mr-md-3"
-                href="disclaimer.html"
-                title="disclaimer"
+              <a class="mr-md-3" href="disclaimer.html" title="disclaimer"
                 >Disclaimer</a
               >
             </p>
