--- a/ui/html/terms-and-condition.html
+++ b/ui/html/terms-and-condition.html
@@ -4,22 +4,100 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="preload"
+      href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
+    /></noscript>
 
-    <link rel="preload" href="../css/animate.css" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
-    <noscript><link rel="stylesheet" href="../css/animate.css"></noscript>
+    <link
+      rel="preload"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    /></noscript>
 
-    <link rel="stylesheet" href="../css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="../css/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="../css/magnific-popup.css" />
+    <link
+      rel="preload"
+      href="../css/animate.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript><link rel="stylesheet" href="../css/animate.css" /></noscript>
 
-    <link rel="stylesheet" href="../css/bootstrap-datepicker.css" />
-    <link rel="stylesheet" href="../css/jquery.timepicker.css" />
+    <link
+      rel="preload"
+      href="../css/owl.carousel.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/owl.carousel.min.css"
+    /></noscript>
 
-    <link rel="preload" href="../css/flaticon.css" as="style"/>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link
+      rel="preload"
+      href="../css/owl.theme.default.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/owl.theme.default.min.css"
+    /></noscript>
+    <link
+      rel="preload"
+      href="../css/magnific-popup.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/magnific-popup.css"
+    /></noscript>
+
+    <link
+      rel="preload"
+      href="../css/bootstrap-datepicker.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/bootstrap-datepicker.css"
+    /></noscript>
+
+    <link
+      rel="preload"
+      href="../css/jquery.timepicker.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/jquery.timepicker.css"
+    /></noscript>
+
+    <link
+      rel="preload"
+      href="../css/flaticon.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript><link rel="stylesheet" href="../css/flaticon.css" /></noscript>
+    <link
+      rel="preload"
+      href="../css/style.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript><link rel="stylesheet" href="../css/style.css" /></noscript>
     <title>Terms and Condition | weight loss and health motivation</title>
   </head>
   <body>
@@ -125,8 +203,12 @@
       <p>
         These Terms of Service (“Terms”, “Terms of Service”) govern your use of
         our website located at
-        <b><a href="https://www.weightlossandhealthmotivation.com/">https://www.weightlossandhealthmotivation.com/</a></b> (together or
-        individually “Service”) operated by
+        <b
+          ><a href="https://www.weightlossandhealthmotivation.com/"
+            >https://www.weightlossandhealthmotivation.com/</a
+          ></b
+        >
+        (together or individually “Service”) operated by
         <b>weight loss and health motivation</b>.
       </p>
       <p>
@@ -142,9 +224,12 @@
       <p>
         If you do not agree with (or cannot comply with) Agreements, then you
         may not use the Service, but please let us know by emailing at
-        <b><a href="mailto:support@weightlossandhealthmotivation.com">support@weightlossandhealthmotivation.com</a></b>.so we can try to find a
-        solution. These Terms apply to all visitors, users and others who wish
-        to access or use Service.
+        <b
+          ><a href="mailto:support@weightlossandhealthmotivation.com"
+            >support@weightlossandhealthmotivation.com</a
+          ></b
+        >.so we can try to find a solution. These Terms apply to all visitors,
+        users and others who wish to access or use Service.
       </p>
       <p>2. <b>Communications</b></p>
       <p>
@@ -152,7 +237,11 @@
         or promotional materials and other information we may send. However, you
         may opt out of receiving any, or all, of these communications from us by
         following the unsubscribe link or by emailing at
-        <b><a href="mailto:support@weightlossandhealthmotivation.com">support@weightlossandhealthmotivation.com</a></b>.
+        <b
+          ><a href="mailto:support@weightlossandhealthmotivation.com"
+            >support@weightlossandhealthmotivation.com</a
+          ></b
+        >.
       </p>
 
       <p>3. <b>Contests, Sweepstakes and Promotions</b></p>
@@ -325,27 +414,35 @@
       </p>
       <p>
         You can contact our Copyright Agent via email at
-        <b><a href="mailto:support@weightlossandhealthmotivation.com">support@weightlossandhealthmotivation.com</a></b>.
+        <b
+          ><a href="mailto:support@weightlossandhealthmotivation.com"
+            >support@weightlossandhealthmotivation.com</a
+          ></b
+        >.
       </p>
       <p>11. <b>Error Reporting and Feedback</b></p>
       <p>
         You may provide us either directly at
-        <b><a href="mailto:support@weightlossandhealthmotivation.com">support@weightlossandhealthmotivation.com</a></b> or via third party sites and
-        tools with information and feedback concerning errors, suggestions for
-        improvements, ideas, problems, complaints, and other matters related to
-        our Service (“Feedback”). You acknowledge and agree that: (i) you shall
-        not retain, acquire or assert any intellectual property right or other
-        right, title or interest in or to the Feedback; (ii) Company may have
-        development ideas similar to the Feedback; (iii) Feedback does not
-        contain confidential information or proprietary information from you or
-        any third party; and (iv) Company is not under any obligation of
-        confidentiality with respect to the Feedback. In the event the transfer
-        of the ownership to the Feedback is not possible due to applicable
-        mandatory laws, you grant Company and its affiliates an exclusive,
-        transferable, irrevocable, free-of-charge, sub-licensable, unlimited and
-        perpetual right to use (including copy, modify, create derivative works,
-        publish, distribute and commercialize) Feedback in any manner and for
-        any purpose.
+        <b
+          ><a href="mailto:support@weightlossandhealthmotivation.com"
+            >support@weightlossandhealthmotivation.com</a
+          ></b
+        >
+        or via third party sites and tools with information and feedback
+        concerning errors, suggestions for improvements, ideas, problems,
+        complaints, and other matters related to our Service (“Feedback”). You
+        acknowledge and agree that: (i) you shall not retain, acquire or assert
+        any intellectual property right or other right, title or interest in or
+        to the Feedback; (ii) Company may have development ideas similar to the
+        Feedback; (iii) Feedback does not contain confidential information or
+        proprietary information from you or any third party; and (iv) Company is
+        not under any obligation of confidentiality with respect to the
+        Feedback. In the event the transfer of the ownership to the Feedback is
+        not possible due to applicable mandatory laws, you grant Company and its
+        affiliates an exclusive, transferable, irrevocable, free-of-charge,
+        sub-licensable, unlimited and perpetual right to use (including copy,
+        modify, create derivative works, publish, distribute and commercialize)
+        Feedback in any manner and for any purpose.
       </p>
       <p>12. <b>Links To Other Web Sites</b></p>
       <p>
@@ -511,7 +608,12 @@
       <p>21. <b>Contact Us</b></p>
       <p>
         Please send your feedback, comments, requests for technical support by
-        email: <b><a href="mailto:support@weightlossandhealthmotivation.com">support@weightlossandhealthmotivation.com</a></b>.
+        email:
+        <b
+          ><a href="mailto:support@weightlossandhealthmotivation.com"
+            >support@weightlossandhealthmotivation.com</a
+          ></b
+        >.
       </p>
     </div>
     <footer class="footer">
@@ -642,10 +744,7 @@
                 title="Privacy Policy"
                 >Privacy</a
               >
-              <a
-                class="mr-md-3"
-                href="disclaimer.html"
-                title="disclaimer"
+              <a class="mr-md-3" href="disclaimer.html" title="disclaimer"
                 >Disclaimer</a
               >
             </p>
