--- a/ui/html/subscribe-success.html
+++ b/ui/html/subscribe-success.html
@@ -4,22 +4,100 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="preload"
+      href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
-    <link rel="stylesheet" href="../css/owl.carousel.min.css" />
-    <link rel="preload" href="../css/animate.css" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
-    <noscript><link rel="stylesheet" href="../css/animate.css"></noscript>
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
+    /></noscript>
 
-    <link rel="stylesheet" href="../css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="../css/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="../css/magnific-popup.css" />
+    <link
+      rel="preload"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    /></noscript>
 
-    <link rel="stylesheet" href="../css/bootstrap-datepicker.css" />
-    <link rel="stylesheet" href="../css/jquery.timepicker.css" />
+    <link
+      rel="preload"
+      href="../css/animate.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript><link rel="stylesheet" href="../css/animate.css" /></noscript>
 
-    <link rel="preload" href="../css/flaticon.css" as="style"/>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link
+      rel="preload"
+      href="../css/owl.carousel.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/owl.carousel.min.css"
+    /></noscript>
+
+    <link
+      rel="preload"
+      href="../css/owl.theme.default.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/owl.theme.default.min.css"
+    /></noscript>
+    <link
+      rel="preload"
+      href="../css/magnific-popup.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/magnific-popup.css"
+    /></noscript>
+
+    <link
+      rel="preload"
+      href="../css/bootstrap-datepicker.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/bootstrap-datepicker.css"
+    /></noscript>
+
+    <link
+      rel="preload"
+      href="../css/jquery.timepicker.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../css/jquery.timepicker.css"
+    /></noscript>
+
+    <link
+      rel="preload"
+      href="../css/flaticon.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript><link rel="stylesheet" href="../css/flaticon.css" /></noscript>
+    <link
+      rel="preload"
+      href="../css/style.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript><link rel="stylesheet" href="../css/style.css" /></noscript>
     <title>Thank you!</title>
   </head>
   <body>
@@ -264,10 +342,7 @@
                 title="Privacy Policy"
                 >Privacy</a
               >
-              <a
-                class="mr-md-3"
-                href="disclaimer.html"
-                title="disclaimer"
+              <a class="mr-md-3" href="disclaimer.html" title="disclaimer"
                 >Disclaimer</a
               >
             </p>
