--- a/ui/html/disclaimer.html
+++ b/ui/html/disclaimer.html
@@ -15,17 +15,8 @@
         href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
     /></noscript>
 
-    <link
-      rel="preload"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-    <noscript
-      ><link
-        rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    /></noscript>
+    <link rel="preload" href="../icons asset/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="../icons asset/css/all.min.css" /></noscript>
 
     <link
       rel="preload"
@@ -123,7 +114,7 @@
                   href="https://web.facebook.com/Weightloss.healthmotivation"
                   target="_blank"
                   class="d-flex align-items-center justify-content-center"
-                  ><span class="fa fa-facebook"
+                  ><span class="fab fa-facebook"
                     ><i class="sr-only" title="facebook">Facebook</i></span
                   ></a
                 >
@@ -131,7 +122,7 @@
                   href="#"
                   class="d-flex align-items-center justify-content-center"
                   title="twitter"
-                  ><span class="fa fa-twitter"
+                  ><span class="fab fa-twitter"
                     ><i class="sr-only">Twitter</i></span
                   ></a
                 >
@@ -139,7 +130,7 @@
                   href="#"
                   class="d-flex align-items-center justify-content-center"
                   title="instagram"
-                  ><span class="fa fa-instagram"
+                  ><span class="fab fa-instagram"
                     ><i class="sr-only">Instagram</i></span
                   ></a
                 >
