--- a/ui/html/contact.html
+++ b/ui/html/contact.html
@@ -9,8 +9,8 @@
 	<link rel="preload" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"></noscript>
 
-	<link rel="preload" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></noscript>
+	<link rel="preload" href="../icons asset/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="../icons asset/css/all.min.css" /></noscript>
  
     <link rel="preload" href="../css/animate.css" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
     <noscript><link rel="stylesheet" href="../css/animate.css"></noscript>
@@ -44,9 +44,9 @@
 						<div class="col d-flex justify-content-end">
 							<div class="social-media">
 				    		<p class="mb-0 d-flex">
-				    			<a href="https://web.facebook.com/Weightloss.healthmotivation" target="_blank" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only" title="facebook">Facebook</i></span></a>
-				    			<a href="#" class="d-flex align-items-center justify-content-center" title="twitter"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-				    			<a href="#" class="d-flex align-items-center justify-content-center" title="instagram"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
+				    			<a href="https://web.facebook.com/Weightloss.healthmotivation" target="_blank" class="d-flex align-items-center justify-content-center"><span class="fab fa-facebook"><i class="sr-only" title="facebook">Facebook</i></span></a>
+				    			<a href="#" class="d-flex align-items-center justify-content-center" title="twitter"><span class="fab fa-twitter"><i class="sr-only">Twitter</i></span></a>
+				    			<a href="#" class="d-flex align-items-center justify-content-center" title="instagram"><span class="fab fa-instagram"><i class="sr-only">Instagram</i></span></a>
 				    			
 				    		</p>
 			        </div>
