--- a/ui/index.html
+++ b/ui/index.html
@@ -24,19 +24,8 @@
         rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
     /></noscript>
-
-    <link
-      rel="preload"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-    <noscript
-      ><link
-        rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    /></noscript>
-
+    <link rel="preload" href="icons asset/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="icons asset/css/all.min.css" /></noscript>
     <link
       rel="preload"
       href="css/animate.css"
@@ -130,7 +119,7 @@
                   class="d-flex align-items-center justify-content-center"
                   title="Facebook"
                   target="_blank"
-                  ><span class="fa fa-facebook"
+                  ><span class="fab fa-facebook"
                     ><i class="sr-only">Facebook</i></span
                   ></a
                 >
@@ -138,7 +127,7 @@
                   href="#"
                   class="d-flex align-items-center justify-content-center"
                   title="twitter"
-                  ><span class="fa fa-twitter"
+                  ><span class="fab fa-twitter"
                     ><i class="sr-only">Twitter</i></span
                   ></a
                 >
@@ -146,7 +135,7 @@
                   href="#"
                   class="d-flex align-items-center justify-content-center"
                   title="instagram"
-                  ><span class="fa fa-instagram"
+                  ><span class="fab fa-instagram"
                     ><i class="sr-only">Instagram</i></span
                   ></a
                 >
