adding resurge page

--- a/ui/html/disclaimer.html
+++ b/ui/html/disclaimer.html
@@ -89,7 +89,7 @@
       onload="this.onload=null;this.rel='stylesheet'"
     />
     <noscript><link rel="stylesheet" href="../css/style.css" /></noscript>
-    <title>Terms and Condition | weight loss and health motivation</title>
+    <title>Disclaimer | weight loss and health motivation</title>
   </head>
   <body>
     <div class="wrap">
