adding resurge links

--- a/ui/html/resurge-review.html
+++ b/ui/html/resurge-review.html
@@ -26,7 +26,11 @@
           <div class="headline">
             <h1>Discover How To Shrink Your Belly While You Sleep</h1>
             <div class="link">
-              <a href="#" class="btn-danger">watch video</a>
+              <a
+                href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
+                class="btn-danger"
+                >watch video</a
+              >
             </div>
           </div>
           <div class="img-headline">
@@ -65,7 +69,11 @@
             deprivation. By restoring deep sleep, ensures proper functioning of
             fat-burning hormones leading to weight loss
           </p>
-          <a href="#" class="btn-danger">learn more</a>
+          <a
+            href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
+            class="btn-danger"
+            >learn more</a
+          >
         </div>
       </div>
     </section>
@@ -100,7 +108,11 @@
           improve deep sleep and enhance natural metabolic regeneration in both
           women and men.
         </p>
-        <a href="#" class="btn-danger">learn more</a>
+        <a
+          href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
+          class="btn-danger"
+          >learn more</a
+        >
       </div>
     </section>
     <section class="benefits container">
@@ -127,7 +139,11 @@
           </li>
           <li>Gain more confidence and develop a high concentration power.</li>
         </ul>
-        <a href="#" class="btn-danger">Buy now from official website</a>
+        <a
+          href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
+          class="btn-danger"
+          >Buy now from official website</a
+        >
       </div>
     </section>
     <footer class="footer-section">
